# MediaPro

./: .gitignore  BottomBar1.qml  CMakeLists.txt  Images.qrc  LibraryScreen.qml  Main.qml  PlayingScreen.qml  QueueScreen.qml  README.md  RulesScreen.qml  SettingsScreen.qml  SideBar.qml  main.cpp  someclass.h
Controllers/: MusicPlayer.h  system.cpp  system.h
src/: DirectoryManager.cpp  DirectoryManager.h  DomainCondition.cpp  DomainCondition.h  DomainRule.cpp  DomainRule.h  LibraryManager.cpp  LibraryManager.h  OrderRule.cpp  OrderRule.h  Queue.cpp  Queue.h  Song.cpp  Song.h  Tag.cpp  Tag.h  main.cpp
